[project]
name = "education-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aenum==3.1.15",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.11.0",
    "aiosignal==1.3.1",
    "altair==5.4.1",
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "async-timeout==5.0.1",
    "attrs==24.2.0",
    "blinker==1.9.0",
    "cachetools==5.5.0",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "dataclasses-json==0.6.7",
    "deepgram-sdk==3.7.2",
    "deprecation==2.1.0",
    "distro==1.9.0",
    "exceptiongroup==1.2.2",
    "fastapi==0.115.5",
    "frozenlist==1.5.0",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "gtts==2.5.4",
    "h11==0.14.0",
    "httpcore==1.0.6",
    "httpx==0.27.2",
    "idna==3.10",
    "jinja2==3.1.4",
    "jiter==0.7.1",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "langchain>=1.1.0",
    "langchain-groq>=1.1.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.23.1",
    "mdurl==0.1.2",
    "multidict==6.1.0",
    "mypy-extensions==1.0.0",
    "narwhals==1.13.5",
    "numpy==2.1.3",
    "openai==1.54.4",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.0.0",
    "propcache==0.2.0",
    "protobuf==5.28.3",
    "pyarrow==18.0.0",
    "pycparser==2.22",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "pydeck==0.9.1",
    "pygments==2.18.0",
    "pymupdf==1.24.13",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.17",
    "pytz==2024.2",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rich==13.9.4",
    "rpds-py==0.21.0",
    "scipy==1.14.1",
    "six==1.16.0",
    "smmap==5.0.1",
    "sniffio==1.3.1",
    "sounddevice==0.5.1",
    "speechrecognition==3.11.0",
    "starlette==0.41.2",
    "streamlit==1.40.1",
    "tenacity==8.2.2",
    "toml==0.10.2",
    "tornado==6.4.1",
    "tqdm==4.67.0",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "uvicorn==0.32.0",
    "watchdog==6.0.0",
    "wavio==0.0.9",
    "websockets==14.1",
    "yarl==1.17.1",
]
